--- a/sys-devel/automake/ChangeLog
+++ b/sys-devel/automake/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for sys-devel/automake
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.104 2007/08/26 21:09:13 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.106 2007/09/08 06:46:28 vapier Exp $
+
+  08 Sep 2007; Mike Frysinger <vapier@gentoo.org>
+  +files/automake-1.6.3-test-fixes.patch,
+  +files/automake-1.7.9-test-fixes.patch,
+  +files/automake-1.8.5-test-fixes.patch, automake-1.4_p6.ebuild,
+  automake-1.5.ebuild, automake-1.6.3.ebuild, automake-1.7.9-r1.ebuild,
+  automake-1.8.5-r3.ebuild, automake-1.9.6-r2.ebuild:
+  Fixup misc false test failures related to newer versions of autotools in
+  general.
+
+  08 Sep 2007; Mike Frysinger <vapier@gentoo.org> automake-1.10.ebuild:
+  Set docdir to the right place #154903 by Chris Mayo.
 
   26 Aug 2007; Mike Frysinger <vapier@gentoo.org>
   files/automake-1.5-test-fixes.patch:
