--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7783 (14 Sep 2007)
+
+  14 Sep 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7716.ebuild, +portage-2.2.00.7783.ebuild:
+  New snapshot
+
 *portage-2.2.00.7724 (02 Sep 2007)
 
   02 Sep 2007; Fabian Groffen <grobian@gentoo.org>
