--- a/app-editors/emacs/ChangeLog
+++ b/app-editors/emacs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/emacs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.174 2007/08/25 20:55:18 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.176 2007/09/19 07:03:15 ulm Exp $
+
+  18 Sep 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1.ebuild,
+  emacs-22.1-r1.ebuild:
+  Change WANT_AUTOCONF to 2.5 following a change in autotools.eclass.
+  Fixes bugs #192894 and #192923.
 
   25 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-18.59-r4.ebuild, emacs-21.4-r4.ebuild, emacs-21.4-r8.ebuild,
