--- a/sys-devel/libperl/ChangeLog
+++ b/sys-devel/libperl/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.127 2007/08/06 16:34:27 truedfx Exp $
 
+  21 Sep 2007; Michael Haubenwallner <haubi@gentoo.org>
+  files/libperl-5.8.8-aix.patch, libperl-5.8.8-r01.1.ebuild:
+  apply soname patch for linux and solaris only.
+  aix patch documented inside patch, can be applied unconditionally.
+
   06 Aug 2007; <truedfx@gentoo.org>
   +files/libperl-5.8.8-makedepend-syntax.patch, libperl-5.8.8-r1.ebuild:
   Fix syntax error in makedepend.SH
