--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Sep 2007; Fabian Groffen <fabian@gentoo.org> package.mask:
+  gdkconfig.h is installed in some weird location, masking gtk-2.12.0 for that
+  reason
+
   13 Sep 2007; Fabian Groffen <fabian@gentoo.org> package.mask:
   tetex-3 does NOT install pdflatex in prefix!  Masking again
 
