--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7889 (29 Sep 2007)
+
+  29 Sep 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7724.ebuild, +portage-2.2.00.7889.ebuild:
+  New snapshot with fresh blessings from zmedico
+
 *portage-2.2.00.7791 (18 Sep 2007)
 
   18 Sep 2007; Fabian Groffen <grobian@gentoo.org>
