--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.7903 (02 Oct 2007)
+
+  02 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -files/portage-2.2.00.7889-fix_indentation.prefix,
+  -portage-2.2.00.7889.ebuild, +portage-2.2.00.7903.ebuild:
+  New snapshot which includes the fix pipping checked in yesterday as patch
+
 *portage-2.2.00.7889 (29 Sep 2007)
 
   29 Sep 2007; Fabian Groffen <grobian@gentoo.org>
