FreeBSD has sandbox support, but enabling it causes Portage to consider each ebuild as 'masked by corruption'
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4010770

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  bsd/freebsd/make.defaults:
+  FreeBSD has sandbox support, but enabling it causes Portage to consider each
+  ebuild as 'masked by corruption'
+
   04 Oct 2007; Fabian Groffen <grobian@gentoo.org>
   +bsd/freebsd/6.2/package.provided, +bsd/freebsd/make.defaults,
   +bsd/freebsd/use.mask, +bsd/freebsd/virtuals, -bsd/make.defaults,
