--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for media-video/mplayer
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.526 2007/09/24 14:24:12 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.528 2007/09/28 15:39:05 beandog Exp $
+
+*mplayer-1.0_rc1_p20070927-r1 (28 Sep 2007)
+
+  28 Sep 2007; Steve Dibb <beandog@gentoo.org>
+  -mplayer-1.0_rc1_p20070927.ebuild, +mplayer-1.0_rc1_p20070927-r1.ebuild:
+  Fix a52 typo, bug 194079
+
+*mplayer-1.0_rc1_p20070927 (27 Sep 2007)
+
+  27 Sep 2007; Steve Dibb <beandog@gentoo.org>
+  +mplayer-1.0_rc1_p20070927.ebuild:
+  Subversion bump, install a52 by default with dvd use flag, switch xvmc
+  linking back to generic lib
 
   24 Sep 2007; Samuli Suominen <drac@gentoo.org>
   mplayer-1.0_rc1_p20070824.ebuild:
