--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.8027 (09 Oct 2007)
+
+  09 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7791.ebuild, +portage-2.2.00.8027.ebuild:
+  New snapshot.  Most important: a fixed repoman
+
 *portage-2.2.00.7961 (05 Oct 2007)
 
   05 Oct 2007; Fabian Groffen <grobian@gentoo.org>
