--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.19 2007/10/08 15:20:23 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.21 2007/10/10 12:34:04 bicatali Exp $
+
+  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org> virtuals:
+  remove virtual/editor, we have a new-style virtual now
+
+  09 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org> virtuals:
+  removed virtual/blas (now new style), virtual/cblas (which never existed and
+  now is new style) and replaced default lapack for lapack-reference
 
   08 Oct 2007; Andrej Kacian <ticho@gentoo.org> use.mask:
   Mask ssse3 use flag globally - it is unmasked for x86 already, as it should
