--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.8079 (12 Oct 2007)
+
+  12 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.7903.ebuild, +portage-2.2.00.8079.ebuild:
+  New snapshot, should include some binpkg fixes
+
 *portage-2.2.00.8027 (09 Oct 2007)
 
   09 Oct 2007; Fabian Groffen <grobian@gentoo.org>
