--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.8110 (13 Oct 2007)
+
+  13 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.00.8110.ebuild:
+  Essential fixes to emerge binpkgs in prefix right. Solves problem with for
+  example ghc binpkg
+
 *portage-2.2.00.8079 (12 Oct 2007)
 
   12 Oct 2007; Fabian Groffen <grobian@gentoo.org>
