--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -5,7 +5,7 @@
 *portage-2.2.00.8110 (13 Oct 2007)
 
   13 Oct 2007; Fabian Groffen <grobian@gentoo.org>
-  +portage-2.2.00.8110.ebuild:
+  -portage-2.2.00.7961.ebuild, +portage-2.2.00.8112.ebuild:
   Essential fixes to emerge binpkgs in prefix right. Solves problem with for
   example ghc binpkg
 
