Add some tools of developer_cmds, to have rpcgen and unifdef (Portage version: 2.2.00.8123-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011294

--- a/sys-apps/darwin-miscutils/ChangeLog
+++ b/sys-apps/darwin-miscutils/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*darwin-miscutils-4 (14 Oct 2007)
+
+  14 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -darwin-miscutils-3.ebuild, +darwin-miscutils-4.ebuild:
+  Add some tools of developer_cmds, to have rpcgen and unifdef
+
 *darwin-miscutils-3 (17 Aug 2007)
 
   17 Aug 2007; Elias Pipping <pipping@mi.fu-berlin.de>
