--- a/sys-devel/odcctools/ChangeLog
+++ b/sys-devel/odcctools/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  +files/odcctools-20070629-solaris.patch, odcctools-20070629-r1.ebuild:
+  Marked ~x86-solaris and added patch to allow compilation there. For safety
+  the patch is only applied when we're not on Darwin
+
 *odcctools-20070629-r1 (10 Oct 2007)
 
   10 Oct 2007; Fabian Groffen <grobian@gentoo.org>
