--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Oct 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Remove =sys-devel/m4-1.4.10 mask as it is no longer in the tree
+
   14 Oct 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
   mask =dev-libs/openssl-0.9.8f
 
