--- a/sys-devel/odcctools/ChangeLog
+++ b/sys-devel/odcctools/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  odcctools-20070629-r1.ebuild:
+  Add --program-prefix= to avoid the default of ${CTARGET} when
+  cross-compiling. This breaks as what we install does not use the ${CTARGET}
+
   17 Oct 2007; Fabian Groffen <grobian@gentoo.org>
   odcctools-20070629-r1.ebuild:
   Made ebuild cross-compile safe, made it work like toolchain-binutils.eclass
