--- a/sys-devel/gcc-apple/ChangeLog
+++ b/sys-devel/gcc-apple/ChangeLog
@@ -1,12 +1,17 @@
 # ChangeLog for sys-devel/gcc-apple
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  gcc-apple-4.0.1_p5363-r1.ebuild:
+  Slight change to make gcc use Darwin libtool also in a cross-compile
+  environment.
 
   10 Dec 2006; Fabian Groffen <grobian@gentoo.org> +metadata.xml:
   Add metadata.xml
 
   24 Nov 2006; Fabian Groffen <grobian@gentoo.org>
-  gcc-apple-3.5.0_p3506-r1.ebuild, gcc-apple-4.0.1_p5363-r1.ebuild:
+  gcc-apple-4.0.1_p5363-r1.ebuild:
   Don't install libiberty.a as this prevents installing multiple compilers
   and isn't stricktly necessary.
 
