openssl compilation is fixed for Darwin, so unmask
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011535

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -3,6 +3,9 @@
 # $Header: $
 
   21 Oct 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
+  openssl compilation is fixed for Darwin, so unmask
+
+  21 Oct 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask sys-apps/slocate as it isn't prefix ready, work in progress
 
   17 Oct 2007; Fabian Groffen <grobian@gentoo.org> package.mask:
