--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.8227 (22 Oct 2007)
+
+  22 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.8112.ebuild, +portage-2.2.00.8227.ebuild:
+  New snapshot, should now also compile on HPUX
+
 *portage-2.2.00.8127 (15 Oct 2007)
 
   15 Oct 2007; Fabian Groffen <grobian@gentoo.org>
