--- a/www-client/mozilla-firefox/ChangeLog
+++ b/www-client/mozilla-firefox/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.330 2007/10/19 15:06:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.333 2007/10/21 20:24:48 armin76 Exp $
+
+  21 Oct 2007; Raúl Porcel <armin76@gentoo.org>
+  mozilla-firefox-2.0.0.8.ebuild:
+  Bump patchset to fix bug #196444, bug #188636, and fix bug #186750 thanks to
+  Walter Meinl <wuno at lsvw dot de> for the patches
+
+  21 Oct 2007; Markus Meier <maekke@gentoo.org>
+  mozilla-firefox-2.0.0.8.ebuild:
+  x86 stable, security bug #196480
+
+  21 Oct 2007; Raúl Porcel <armin76@gentoo.org>
+  mozilla-firefox-2.0.0.8.ebuild:
+  Bump patchset to fix bug #196444
 
 *mozilla-firefox-2.0.0.8 (19 Oct 2007)
 
