Don't allow to change the EPREFIX dynamically per linker, as haubi doesn't like it (and he has a point there), the target EPREFIX is now stored in the env.d file (Portage version: 2.2.00.8227-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011573

--- a/sys-devel/binutils-config/files/binutils-config-1.9
+++ b/sys-devel/binutils-config/files/binutils-config-1.9
@@ -8,7 +8,6 @@
 #  TARGET-VER:		has a TARGET and VER variable
 
 EPREFIX="@GENTOO_PORTAGE_EPREFIX@"
-TPREFIX=${TPREFIX:-${EPREFIX}}
 
 [[ -z ${ROOT} ]] && ROOT="/"
 #[[ ${ROOT} != */ ]] && ROOT="${ROOT}/"
@@ -61,6 +60,16 @@ switch_profile() {
 	if [[ -z ${VER} ]] ; then
 		eerror "${PROFILE} is invalid (no \$VER defined) :("
 		return 1
+	fi
+	if [[ -z ${TPREFIX} ]] ; then
+		if [[ ${TARGET} != ${HOST} ]] ; then
+			eerror "${PROFILE} is invalid (no \$TPREFIX defined) :("
+			return 1
+		else
+			# avoid major complaints and floods of bugs, if we're not
+			# crossing TPREFIX should equal EPREFIX
+			TPREFIX=${EPREFIX}
+		fi
 	fi
 
 	#
