--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.8280 (24 Oct 2007)
+
+  24 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.8276.ebuild, +portage-2.2.00.8280.ebuild:
+  Replace version by a version of portage I just used to commit the previous
+  portage (with repoman, fixing it untill it worked)
+
 *portage-2.2.00.8276 (24 Oct 2007)
 
   24 Oct 2007; Fabian Groffen <grobian@gentoo.org>
