use separate case for FreeBSD, as it has no lib64 stuff, and probably will never have (Portage version: 2.2.00.8280-prefix/SVN/Darwin 8.10.0 powerpc
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011608

--- a/sys-devel/binutils-config/files/binutils-config-1.9
+++ b/sys-devel/binutils-config/files/binutils-config-1.9
@@ -163,7 +163,17 @@ switch_profile() {
 							-e "s:@GENTOO_PORTAGE_CTARGET_LINKER@:${EPREFIX}/${BINPATH}/${x}:g" \
 							"${ROOT}${BINPATH_LINKS}/${x}" || die
 					;;
-					*-linux-gnu|*-freebsd*)
+					*-freebsd*)
+						sed -i \
+							-e "s:@GENTOO_PORTAGE_TPREFIX@:${TPREFIX}:g" \
+							-e '/@GENTOO_PORTAGE_LINKER_OPTIONS@/d' \
+							-e "s:@GENTOO_PORTAGE_LIB_PATHS@:/usr/lib /lib:g" \
+							-e 's:@GENTOO_PORTAGE_LIBFLAG@:-L:g' \
+							-e 's:@GENTOO_PORTAGE_RPATHFLAG@:-rpath=:g' \
+							-e "s:@GENTOO_PORTAGE_CTARGET_LINKER@:${EPREFIX}/${BINPATH}/${x}:g" \
+							"${ROOT}${BINPATH_LINKS}/${x}" || die
+					;;
+					*-linux-gnu)
 						sed -i \
 							-e "s:@GENTOO_PORTAGE_TPREFIX@:${TPREFIX}:g" \
 							-e '/@GENTOO_PORTAGE_LINKER_OPTIONS@/d' \
