New snapshot, condensed digest checking for distfiles (Portage version: 2.2.00.8321-prefix/SVN/Darwin 8.10.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4011672

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.8321 (27 Oct 2007)
+
+  27 Oct 2007; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.8127.ebuild, +portage-2.2.00.8321.ebuild:
+  New snapshot, condensed digest checking for distfiles
+
 *portage-2.2.00.8299 (25 Oct 2007)
 
   25 Oct 2007; Fabian Groffen <grobian@gentoo.org>
